stop playlist container items from jumping around when page switching

--- a/src/style.css
+++ b/src/style.css
@@ -384,6 +384,7 @@ main > *.hidden {
     display: flex;
     flex: 1 1 0;
     height: 100%;
+    width: 100vw;
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
